[package]
name = "cdp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.17.3"
url = "2.1.0"
reqwest = { version = "^0.11", features = ["blocking", "json"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "1.0"