[package]
name = "cdp-rs"
description = "Chrome Dev Protocol client written in Rust"
categories = ["network-programming"]
keywords = ["cdp", "chrome-dev-protocol"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/btbaggin/cdp-rs"
documentation = "https://docs.rs/cdp-rs"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.17.3"
url = "2.1.0"
reqwest = { version = "^0.11", features = ["blocking", "json"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "1.0"
mio = "0.8.5"