[package]
name = "cdp-rs"
description = "Chrome Dev Protocol client written in Rust"
categories = ["network-programming"]
keywords = ["cdp", "chrome-dev-protocol"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/btbaggin/cdp-rs"
documentation = "https://docs.rs/cdp-rs"
version = "0.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "^0.17"
url = "^2"
reqwest = { version = "^0.11", features = ["blocking", "json"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"